@@ -15,6 +15,7 @@ import com.snippetsearcher.snippet.dto.response.ListSnippetsResponse;
 import com.snippetsearcher.snippet.dto.response.SnippetLintErrorResponse;
 import com.snippetsearcher.snippet.dto.response.SnippetListItemResponse;
 import com.snippetsearcher.snippet.dto.response.SnippetResponse;
+import com.snippetsearcher.snippet.dto.response.SnippetTestExecutionResponse;
 import com.snippetsearcher.snippet.dto.response.SnippetTestResponse;
 import com.snippetsearcher.snippet.exception.SnippetNotFoundException;
 import com.snippetsearcher.snippet.jobs.SnippetJobProducer;
@@ -158,17 +159,40 @@ public class SnippetService {
   @Transactional(readOnly = true)
   public SnippetResponse getSnippet(Jwt jwt, UUID snippetId) {
     UserAccountDto user = ensureUser(jwt);
-    Snippet snippet = loadSnippetOwnedBy(snippetId, user.id());
+    UUID userId = user.id();
+
+    // 2) Pedimos a permission-service qué snippets puede ver este usuario
+    var permissions = permissionClient.listSnippetPermissions(jwt.getTokenValue());
+
+    boolean hasAccess = permissions.stream().anyMatch(p -> p.snippetId().equals(snippetId));
+
+    if (!hasAccess) {
+      // Podés tirar tu propia excepción 404/403 si preferís
+      throw new IllegalStateException("Snippet no encontrado o sin permisos");
+    }
+
+    // 3) Cargamos el snippet desde la base (da igual si el permiso es OWNER o SHARED)
+    Snippet snippet =
+        snippetRepository
+            .findById(snippetId)
+            .orElseThrow(() -> new IllegalStateException("Snippet no encontrado"));
+
+    // 4) Lógica original: contenido, lint, tests, compliance
     String content = downloadSnippetContent(snippet);
+
     List<SnippetLintErrorResponse> lintErrors =
         collectLintErrors(snippet.getLanguage(), snippet.getVersion(), content);
+
     List<SnippetTestResponse> tests =
         snippetTestRepository.findBySnippetId(snippet.getId()).stream()
             .map(SnippetTestResponse::fromEntity)
             .toList();
+
     SnippetComplianceStatus complianceStatus =
         lintErrors.isEmpty() ? SnippetComplianceStatus.VALID : SnippetComplianceStatus.INVALID;
-    String complianceMessage = lintErrors.isEmpty() ? null : lintErrors.getFirst().message();
+
+    String complianceMessage = lintErrors.isEmpty() ? null : lintErrors.get(0).message();
+
     return SnippetResponse.fromEntity(
         snippet, content, lintErrors, tests, complianceStatus, complianceMessage);
   }
@@ -218,8 +242,53 @@ public class SnippetService {
     return SnippetResponse.fromEntity(snippet);
   }
 
-  public UserAccountDto ensureUserForController(Jwt jwt) {
-    return ensureUser(jwt);
+  @Transactional
+  public List<FriendsResponse> getFriends(Jwt jwt) {
+    var user = ensureUser(jwt);
+
+    try {
+      List<PermissionUserDto> users = permissionClient.getUsers(jwt.getTokenValue());
+      UUID currentUserId = user.id();
+
+      return users.stream()
+          .filter(u -> !currentUserId.equals(u.id()))
+          .map(
+              u ->
+                  new FriendsResponse(
+                      u.id().toString(), // UUID → string
+                      u.name(),
+                      u.email()))
+          .toList();
+
+    } catch (RestClientException | IllegalStateException ex) {
+      log.warn("No se pudo obtener la lista de amigos: {}", ex.getMessage());
+      return List.of();
+    }
+  }
+
+  @Transactional
+  public SnippetTestExecutionResponse executeSnippetTest(Jwt jwt, UUID snippetId, UUID testId) {
+    UserAccountDto user = ensureUser(jwt);
+    Snippet snippet = loadSnippetOwnedBy(snippetId, user.id());
+    SnippetTest test =
+        snippetTestRepository
+            .findByIdAndSnippetId(testId, snippet.getId())
+            .orElseThrow(() -> new IllegalArgumentException("El test indicado no existe."));
+
+    String snippetContent = downloadSnippetContent(snippet);
+    String executableContent = buildExecutableContent(snippetContent, test.getScript());
+    LanguageDtos.ExecuteResponse response = executeTest(snippet, executableContent);
+    updateTestResult(test, response);
+    snippetTestRepository.save(test);
+
+    boolean passed = response.exitCode() == 0;
+    return new SnippetTestExecutionResponse(
+        test.getId(),
+        passed,
+        response.exitCode(),
+        response.stdout(),
+        response.stderr(),
+        test.getLastRunAt());
   }
 
   private String uploadValidatedSnippetContent(
@@ -253,7 +322,7 @@ public class SnippetService {
         collectLintErrors(language, version, new String(content, StandardCharsets.UTF_8));
 
     if (!errors.isEmpty()) {
-      SnippetLintErrorResponse firstError = errors.getFirst();
+      SnippetLintErrorResponse firstError = errors.get(0);
       String violatedRule =
           StringUtils.hasText(firstError.rule()) ? firstError.rule() : "desconocida";
       throw new IllegalArgumentException(
@@ -305,7 +374,7 @@ public class SnippetService {
     try {
       return languageClient.execute(
           new LanguageDtos.ExecuteRequest(
-              snippet.getLanguage(), normalizeVersion(snippet.getVersion()), executableContent));
+              snippet.getLanguage(), snippet.getVersion(), executableContent));
     } catch (Exception ex) {
       throw new IllegalStateException("No se pudo ejecutar el test del snippet.", ex);
     }
